--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <img class="loopmob" src="/assets/loopstudiosmob.svg"/> 
             <nav>
                 <div class="hamburger-menu">
-                    <i id="baricon" class="fa-solid fa-bars"></i>
-                </div>
+                    <i id="baricon" class="fa-solid fa-bars"></i>             
+                  </div>
                 <div class="navlinkebi" style="display: none;">
                     <p class="p1">ABOUT</p>
                     <p class="p2">CAREERS</p>
@@ -26,7 +26,7 @@
                 </div>
             </nav>
          <div class="borderdiv">
-            <p class="bdin">Immersive experiences that deliver</p>
+            <h5 class="bdin">Immersive experiences that deliver</h5>
          </div>
         </header>
         <div class="box1">
